[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1"
byteorder = "1"
bytes = "1"
walkdir = "2"
iced = "0.13.1"
criterion = { version = "0.5", features = ["html_reports"] }
local-ip-address = "0.6"
dashmap = "6.0.0"

[[bench]]
name = "localtransfer"
harness = false